[package]
name = "suivm"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
flate2 = "1.0"
tar = "0.4"
indicatif = "0.17"
futures-util = "0.3"
